# dovecot-clouddb

./: configure.in
.hg/: branchheads.cache  dirstate  hgrc  tags.cache  undo.desc
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
.hg/store/data/: _a_u_t_h_o_r_s.i  _c_o_p_y_i_n_g._m_i_t.i  _c_o_p_y_i_n_g.i  _i_n_s_t_a_l_l.i  _makefile.am.i  _n_e_w_s.i  _r_e_a_d_m_e.i  _t_o_d_o.i  acconfig.h.i  autogen.sh.i  config.rpath.i  configure.in.i  dovecot-config.in.i  dovecot-config.in.in.i  dovecot-example.conf.i  dovecot-master-example.conf.i  dovecot.m4.i  dovecot.service.in.i  dovecot.socket.i  dovecot.spec.in.i  is-tagged.py.i  run-test.sh.i  update-version.sh.i  ~2ecvsignore.i  ~2ehgignore.i  ~2ehgsigs.i  ~2ehgtags.i  ~2einslog2.i
.hg/store/data/doc/: _makefile.am.i  _u_s_e-_w_i_k_i-_i_n_s_t_e_a_d.i  auth-protocol.txt.i  auth.txt.i  configuration.txt.i  design.txt.i  documentation.txt.i  dovecot-db-example.conf.i  dovecot-db.conf.i  dovecot-dict-sql-example.conf.i  dovecot-initd.sh.i  dovecot-ldap-example.conf.i  dovecot-ldap.conf.i  dovecot-mysql.conf.i  dovecot-openssl.cnf.i  dovecot-pgsql.conf.i  dovecot-sql-example.conf.i  dovecot-sql.conf.i  index.txt.i  mail-storages.txt.i  mkcert.sh.i  multiaccess.txt.i  nfs.txt.i  securecoding.txt.i  solr-schema.xml.i  thread-refs.txt.i  variables.txt.i  ~2ecvsignore.i
.hg/store/data/doc/example-config/: _makefile.am.i  _r_e_a_d_m_e.in.i  dovecot-db.conf.ext.i  dovecot-db.conf.i  dovecot-sql.conf.i  (+7 more)
.hg/store/data/src/: _makefile.am.i
src/lib-fs/: Makefile.am  fs-api-private.h  fs-swift.c
(+1727 files in other folders)
